Bug 312685 - Amarok fails to re-create CD Tracks properly on startup if they were in playlist when it finished
Summary: Amarok fails to re-create CD Tracks properly on startup if they were in playl...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/CD (other bugs)
Version First Reported In: 2.6.0
Platform: Other Linux
: NOR normal
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-05 14:26 UTC by Matěj Laitl
Modified: 2013-01-05 22:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matěj Laitl 2013-01-05 14:26:45 UTC
This is a report for second part of bug 305708.
Comment 1 Matěj Laitl 2013-01-05 22:32:09 UTC
Git commit 67cab80dae61f0a72659558fa37e6b625aebfa3b by Matěj Laitl.
Committed on 05/01/2013 at 23:27.
Pushed by laitl into branch 'master'.

AudioCdCollection: refactor initialization, trackForUrl() + cleanups

Might also fix bug 279485, please test.

BUGFIXES:
 * Audio CD: fix track recreation on startup.
Related: bug 279485
FIXED-IN: 2.7

M  +1    -0    ChangeLog
M  +193  -211  src/core-impl/collections/audiocd/AudioCdCollection.cpp
M  +4    -4    src/core-impl/collections/audiocd/AudioCdCollection.h
M  +2    -6    src/core-impl/collections/audiocd/AudioCdMeta.cpp
M  +0    -1    src/core-impl/collections/audiocd/AudioCdMeta.h
M  +0    -4    src/core-impl/collections/audiocd/support/AudioCdConnectionAssistant.cpp
M  +6    -1    src/core-impl/collections/support/MemoryCollection.h

http://commits.kde.org/amarok/67cab80dae61f0a72659558fa37e6b625aebfa3b