AudioCdCollection: refactor initialization, trackForUrl() + cleanups

Might also fix bug 279485, please test.

BUGFIXES:
 * Audio CD: fix track recreation on startup.

BUG: 312685
CCBUG: 279485
FIXED-IN: 2.7